--- a/index.html
+++ b/index.html
@@ -8,35 +8,38 @@
     <title>Encriptador</title>
     <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
     <header>
-        <h1><img id="logoprincipal" src="imagenes/Logo.png" alt="" /></h1>
+        
     </header>
     <main>
-        <form action="">
+        <form action="" class="principal">
+            <h1><img id="logoprincipal" src="imagenes/Logo.png" alt="" /></h1>
+
             <section class="datos-encriptar">
                 <textarea name="" id="textoEncriptar" cols="30" placeholder="ingrese texto aqui" rows="10"></textarea>
             </section>
 
             <div id="botones">
-                <p>&#169;Solo letras minusculas y sin acentos</p>
+                <p>Solo letras minusculas y sin acentos</p>
                 <button id="encriptar">Encriptar</button>
                 <button id="desencriptar">Desencriptar</button>
             </div>
 
             <section class="informacion">
-                <div >
-                    <img  id="imagenMuneco" src="imagenes/Muñeco.png" alt="" />
-                    <p id="mensajeEncontrado" >Ningún mensaje fue encontrado</p>
-                </div>
-                <textarea name="" id="textoencriptado" placeholder="Ingresa el texto que desea encriptar o desencriptar" cols="30"
+                <img  id="imagenMuneco" src="imagenes/encriptado-de-datos.png" alt="" />
+                    <img id="imagen2" src="imagenes/binary-code.png" alt="">
+                    <p id="imagenMuneco2" >Ningún mensaje fue encontrado</p>
+                <div class="txtencriptados">
+                    <textarea name="" id="textoencriptado" placeholder="Ingresa el texto que desea encriptar o desencriptar" cols="30"
                     rows="10"></textarea>
-                    <button  class="copiarTexto" id="copiarTexto">Copiar</button>
+                </div>
+               <button id="btncopiar">copiar</button>
+                    
             </section>
         </form>
         <footer>
-            <p>&#169;Creado por George Marmol</p>
+            <p>&#169;Is maintained by <a href="">George Mármol</a></p>
         </footer>
     </main>
     <script src="style.js"></script>
