--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     </header>
     <main>
         <form action="" class="principal">
-            <h1><img id="logoprincipal" src="imagenes/Logo.png" alt="" /></h1>
 
             <section class="datos-encriptar">
-                <textarea name="" id="textoEncriptar" cols="30" placeholder="ingrese texto aqui" rows="10"></textarea>
+                <h1><img id="logoprincipal" src="imagenes/Logo.png" alt="" /></h1>
+                <textarea name="" id="textoEncriptar" placeholder="ingrese texto aqui"></textarea>
             </section>
 
-            <div id="botones">
+            <div class="botones">
                 <p>Solo letras minusculas y sin acentos</p>
                 <button id="encriptar">Encriptar</button>
                 <button id="desencriptar">Desencriptar</button>
             </div>
-
+      
             <section class="informacion">
                 <img  id="imagenMuneco" src="imagenes/encriptado-de-datos.png" alt="" />
                     <img id="imagen2" src="imagenes/binary-code.png" alt="">
@@ -38,10 +38,11 @@
                     
             </section>
         </form>
-        <footer>
+        <footer class="derechos">
             <p>&#169;Is maintained by <a href="">George Mármol</a></p>
         </footer>
     </main>
+  
     <script src="style.js"></script>
 </body>
 
